--- a/team.html
+++ b/team.html
@@ -99,10 +99,14 @@ sitemap:
 (VS) indicates visiting student; (VU) indicates Vanderbilt student; (I) indicates UIUC student; year indicates beginning of visit, collaboration, or employment in the group.
 
 {% for student in site.teams.internsundergrads %}
-    <ul>{{ student.firstname }} {{ student.lastname }} {{ student.tag }}, {{ student.degree }}, {{ student.department }}, {{ student.year }}</ul>
+    <ul>
+        <li>{{ student.firstname }} {{ student.lastname }} {{ student.tag }}, {{ student.degree }}, {{ student.department }}, {{ student.year }}</li>
+    </ul>
 {% endfor %}
 
 <h3>Student Awards and Reseaerch Internships</h3>
 {% for award in site.teams.awards %}
-    <ul>{{ award.name }}, {{ award.award }}, {{ award.organization }}, {{ award.year }}</ul>
+    <ul>
+        <li>{{ award.name }}, {{ award.award }}, {{ award.organization }}, {{ award.year }}</li>
+    </ul>
 {% endfor %}
