--- a/team.html
+++ b/team.html
@@ -98,15 +98,14 @@ sitemap:
 <h3>Research Interns and Undergraduate Students</h3>
 (VS) indicates visiting student; (VU) indicates Vanderbilt student; (I) indicates UIUC student; year indicates beginning of visit, collaboration, or employment in the group.
 
-{% for student in site.teams.internsundergrads %}
-    student
+{% for student in site.data.internsundergrads %}
     <ul>
         <li>{{ student.firstname }} {{ student.lastname }} {{ student.tag }}, {{ student.degree }}, {{ student.department }}, {{ student.year }}</li>
     </ul>
 {% endfor %}
 
 <h3>Student Awards and Reseaerch Internships</h3>
-{% for award in site.teams.awards %}
+{% for award in site.data.awards %}
     <ul>
         <li>{{ award.name }}, {{ award.award }}, {{ award.organization }}, {{ award.year }}</li>
     </ul>
