Still messed up

--- a/team.html
+++ b/team.html
@@ -43,7 +43,7 @@ sitemap:
                         </a>
                     {% endif %}
                 </h3>
-                <div style="text-align: justify; overflow: hidden"> 
+                <div style="text-align: justify;"> 
                     {{ teammatey.description }} 
                 </div>
 				{% if teammatey.degrees %}
