--- a/team.html
+++ b/team.html
@@ -46,7 +46,7 @@ sitemap:
                 <div style="text-align: justify; overflow-x: hidden; overflow-y: hidden; text-indent: 1em;"> 
                     {{ teammatey.description }}
 					{% if teammatey.site %}
-						Website: <a href="{{ teammatey.site }}">{{ teammatey.firstname }}'s Website</a>
+						<p>Website: <a href="{{ teammatey.site }}">{{ teammatey.firstname }}'s Website</a></p>
 					{% endif %}
 					{% if teammatey.degrees %}
 						<ul>{{ teammatey.degrees }}</ul>
