--- a/team.html
+++ b/team.html
@@ -104,7 +104,7 @@ sitemap:
 {% endfor %}
 
 <h3>Research Interns and Undergraduate Students</h3>
-(VS) indicates visiting student; (VU) indicates Vanderbilt student; (I) indicates UIUC student; year indicates beginning of visit, collaboration, or employment in the group.
+<em>(VS) indicates visiting student; (VU) indicates Vanderbilt student; (I) indicates UIUC student; year indicates beginning of visit, collaboration, or employment in the group.</em>
 <ul>
 {% for student in site.data.internsundergrads %}
         <li>{{ student.firstname }} {{ student.lastname }} [ {{ student.tag }} ], {{ student.degree }}, {{ student.department }}, {{ student.year }}</li>
