Fixed bullet cutoff with margin of 4px

--- a/team.html
+++ b/team.html
@@ -49,7 +49,7 @@ sitemap:
 						<p>Website: <a href="{{ teammatey.site }}">{{ teammatey.firstname }}'s Website</a></p>
 					{% endif %}
 					{% if teammatey.degrees %}
-						<ul>{{ teammatey.degrees }}</ul>
+						<ul style="margin-left: 4px;">{{ teammatey.degrees }}</ul>
 					{% endif %}
                 </div>
             </p>
@@ -92,7 +92,7 @@ sitemap:
                 </h3>
                 <div style="text-align: justify; overflow-x: hidden; overflow-y: hidden; text-indent: 1em;"> 
                     {% if teammatey.degrees %}
-						<ul>{{ teammatey.degrees }}</ul>
+						<ul style="margin-left: 4px;">{{ teammatey.degrees }}</ul>
 					{% endif %}
                 </div>
             </p>
