--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ sitemap:
 </header>
 
 <h2>About</h2>
-<span class="image right"><img src="{{ "/images/dbw.jpg" | absolute_url }}" alt="" /></span>
+<span class="image right"><img src="{{ "/images/dbwVU.jpg" | absolute_url }}" alt="" /></span>
 <p>Daniel Work is an associate professor in the Department of Civil and Environmental
 Engineering, the Department of Electrical Engineering and Computer Science, and
 the Institute for Software Integrated Systems at Vanderbilt University. Prior to
