--- a/team.html
+++ b/team.html
@@ -13,7 +13,10 @@ sitemap:
 </header>
 
 {% assign sortedbyname = (site.people | sort: 'lastname') %}
-<h3>{{sortedbyname}}</h3>
+{% for person in sortedbyname %}
+	person
+{% endfor %}
+
 {% assign sortedbydate = (site.people | sort: 'degreedate') %}
 
 {% assign sorted = (site.teams | sort: 'appear') | where:"class", "current" %}
@@ -25,6 +28,7 @@ sitemap:
 		<div class="content">
 			<br>
 			{% for teammatey in sortedbyname %}
+				teammatey.key
 				{% if team.people contains teammatey.key %}
 				<p style="clear: both; float: left; overflow: auto;">
 					<span class="image  left" style="max-width: 150px;">
