--- a/team.html
+++ b/team.html
@@ -25,6 +25,7 @@ sitemap:
 		<h2>
 			{{team.name}}
 		</h2>
+		<h3>{{team.people}}</h3>
 		<div class="content">
 			<br>
 			{% for teammatey in sortedbyname %}
