Trying again with title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: null
-title: Transportation Research Group
+title: Work Research Group
 description: A transportation cyber physical systems lab at the Institute for Software Integrated Systems
 sitemap:
     priority: 1.0
