--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@ associate editor of IEEE Transactions on Intelligent Transportation Systems and
 Transportation Research Part C – Emerging Technologies, and is a member of the
 IEEE Technical Committee on Cybernetics for Cyber-Physical Systems and the ASCE
 Connected and Autonomous Vehicle Impacts Committee. Work’s research on
-autonomous vehicles has appeared in numerous media outlets including Wired, MIT
+autonomous vehicles has appeared in numerous media outlets including Good Morning America, Wired, MIT
 Technology Review, Forbes, and Smithsonian Magazine. Prof. Work has received a
 number of honors and awards including being named a 2018 Gilbreth Lecturer by
 the National Academy of Engineering, a 2018 IoT Pioneer by Connected World, a
