--- a/index.html
+++ b/index.html
@@ -60,14 +60,21 @@ sitemap:
 								<header class="major">
 									<h2><a href="#">Welcome</a></h2>
 								</header>
-								<a href="#" class="image main"><img src="{{ "/images/Team_research.jpg" | absolute_url }}" alt="" /></a>
+                                <p>Our research group uses sensing technologies, models, data, and advanced analytics to understand mobility systems so that we can improve them. Our research projects explore the interplay between autonomous vehicles and phantom traffic jams. We also use large mobility datasets to understand urban traffic congestion at city scales, and freight rail traffic at the regional scale. We also build mathematical models and systems theory tools to understand the underlying behavior of traffic flow.   </p>
+								<a href="#" class="image main"><img src="/images/Team_research.jpg" alt=""></a>
   
 
 							</article>
                         <!-- youtube -->
                         <article class="post featured">
-                                 <iframe width="560" height="315" src="https://www.youtube.com/embed/FW9VkoibWDw?autoplay=1&mute=1&loop=1&playlist=FW9VkoibWDw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                            <h3>Our research shows how a small number of automated vehicles can help smooth traffic jams.</h3>
+                            <p>See the videos below or check out the full story in <a href="https://www.sciencedirect.com/science/article/pii/S0968090X18301517?via%3Dihub">Transportation Research Part C: Emerging Technologies</a>. </p>
+                                 <iframe width="560" height="315" src="https://www.youtube.com/embed/FW9VkoibWDw?autoplay=1&amp;mute=1&amp;loop=1&amp;playlist=FW9VkoibWDw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                 <iframe width="560" height="315" src="https://www.youtube.com/embed/2mBjYZTeaTc?autoplay=1&amp;mute=1&amp;loop=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
                         </article>
+
+						
 						<!-- Posts -->
 							<section class="posts">
                 {% for post in site.posts limit:4 %}
