--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ sitemap:
 								<header class="major">
 									<h2><a href="#">Welcome</a></h2>
 								</header>
-                                <p>Our research group uses sensing technologies, models, data, and advanced analytics to understand mobility systems so that we can improve them. Our research projects explore the interplay between autonomous vehicles and phantom traffic jams. We also use large mobility datasets to understand urban traffic congestion at city scales, and freight rail traffic at the regional scale. We also build mathematical models and systems theory tools to understand the underlying behavior of traffic flow.   </p>
+                                <p>Our research group uses sensing technologies, models, data, and advanced analytics to understand mobility systems so that we can improve them. Our research projects explore the interplay between autonomous vehicles and phantom traffic jams. We also use large mobility datasets to understand urban traffic congestion at city scales, and freight rail traffic at the regional scale. We build mathematical models and systems theory tools to understand the underlying behavior of traffic flow.   </p>
 								<a href="#" class="image main"><img src="/images/Team_research.jpg" alt=""></a>
   
 
