Added ITSC 2018. This page needs more work.

--- a/publications.html
+++ b/publications.html
@@ -50,6 +50,7 @@ sitemap:
 </ol>
 <p><strong>Conference publications</strong></p>
 <ol>
+<li>W. Barbour, C. Samal, S. Kuppa, A. Dubey, and D. Work. “On the Data-Driven Prediction of Arrival Times for Freight Trains on U.S. Railroads.” <em>In Proceedings of the IEEE Intelligent Transportation Systems Conference (ITSC), 2018.</em> <strong>Download:</strong> <a href="https://ieeexplore.ieee.org/document/8569406">Manuscript</a></li>
 <li>M. Churchill, R. E. Stern, F. Wu, D. Work, M. L. Delle Monache, B. Piccoli, S.Cui, B. Seibold, R. Bhadani, M. Bunting, and J. Sprinkle. “Reducing Emissions Resulting from Stop-and-Go Traffic Waves with Automated Vehicles,” <em>submitted to the 2018 Transportation Research Board Annual Meeting</em>, 2017.</li>
 <li>J.-C. Martinez Mori, W. Barbour, S. Kuppa, and D. Work, “Predicting Delay Occurrence at Freight Rail Sidings.” <em>submitted to the 2018 Transportation Research Board Annual Meeting, 2017.</em></li>
 <li>R. Narayanan, K. Begovich, F. Wu, R. Sowers, and D. Work, “Video as a sensor: a case study for bicycle risks,” submitted to the 2018 Transportation Research Board Annual Meeting, 2017</li>
