--- a/publications.html
+++ b/publications.html
@@ -16,6 +16,8 @@ sitemap:
 </em></p>
 <p><strong>Journal publications</strong></p>
 <ol>
+<li>G. Gunter, D. Gloudemans, R. E. Stern, S. McQuade, R. Bhadani, M. Bunting, M. L. Delle Monache, R. Lysecky, B. Seibold, J. Sprinkle, B. Piccoli, D. B. Work "Are commercially implemented adaptive cruise control systems string stable?" Download: <a href="https://arxiv.org/abs/1905.02108">preprint</a>.</li>
+  <li>G. Gunter, C. Janssen, W. Barbour, R. E. Stern, D. B. Work. "Model based string stability of adaptive cruise control systems using field data." Download: <a href="https://arxiv.org/abs/1902.04983">preprint</a>.</li>
 <li>F. Wu, R. Stern, S. Cui, M. L. Delle Monache, R. Bhadanid, M. Bunting, M. Churchill, N. Hamilton, R. Haulcy, B. Piccoli, B. Seibold, J. Sprinkle, D. Work. &#8220;Tracking vehicle trajectories and fuel rates in oscillatory traffic.&#8221; <em>submitted to Transportation Research Part C: Emerging Technologies, 2017. </em><strong>Download: </strong><a href="https://www.dropbox.com/s/mx3qioeg7yxgz6z/Wuetal2017.pdf?dl=0">preprint</a></li>
 <li>W. Barbour, J. C. Martinez Mori, S. Kuppa, and D. Work. &#8220;Estimating arrival times for US freight rail traffic.&#8221; <em>submitted to Transportation Research Part C: Emerging Technologies, 2017. </em><strong>Download:</strong> <a href="https://www.dropbox.com/s/ojet2nbntvfeo54/Barbouretal2017.pdf?dl=0">preprint</a></li>
 <li>Y. Sun and D. Work. &#8220;Error Bounds for Kalman Filters on Traffic Networks.&#8221; <em>submitted to Networks &amp; Heterogeneous Media, 2017. </em><strong>Download: </strong><a href="https://www.dropbox.com/s/h9wfupk8dee0t21/SunWork2017NHM.pdf?dl=0">preprint</a></li>
