--- a/publications.html
+++ b/publications.html
@@ -53,7 +53,7 @@ sitemap:
 
 <p><strong>Conference publications</strong></p>
 <ol>
-<li>W. Barbour, M. Wilbur, R. Sandoval, C. Van Geffen, B. Hall, A. Dubey, and D. Work. "Data driven methods for effective micromobility parking." In <em>Proceedings of the Transportation Research Board Annual Meeting</em>, 2019.</li><strong>Download:</strong> <a href="download/Lab-Work-scooter_parking_TRB20_preprint.pdf">preprint</a></li>
+<li>W. Barbour, M. Wilbur, R. Sandoval, C. Van Geffen, B. Hall, A. Dubey, and D. Work. "Data driven methods for effective micromobility parking." In <em>Proceedings of the Transportation Research Board Annual Meeting</em>, 2019.</li><strong>Download:</strong> <a href="{{ site.baseurl }} download/Lab-Work-scooter_parking_TRB20_preprint.pdf">preprint</a></li>
 <li>C. Janssen, W. Barbour, E. Hafkenschiel, M. Abkowitz, C. Philip, and D. Work. "Comparative review of peer city scooter policy: city-to-city and temporal assessment." In <em>Proceedings of the Transportation Research Board Annual Meeting</em>, 2019.</li>
 <li>W. Barbour, C. Samal, S. Kuppa, A. Dubey, and D. Work. “On the Data-Driven Prediction of Arrival Times for Freight Trains on U.S. Railroads.” <em>In Proceedings of the IEEE Intelligent Transportation Systems Conference (ITSC), 2018.</em> <strong>Download:</strong> <a href="https://ieeexplore.ieee.org/document/8569406">Manuscript</a></li>
 <li>M. Churchill, R. E. Stern, F. Wu, D. Work, M. L. Delle Monache, B. Piccoli, S.Cui, B. Seibold, R. Bhadani, M. Bunting, and J. Sprinkle. “Reducing Emissions Resulting from Stop-and-Go Traffic Waves with Automated Vehicles,” <em>submitted to the 2018 Transportation Research Board Annual Meeting</em>, 2017.</li>
