--- a/plots.html
+++ b/plots.html
@@ -13,10 +13,10 @@ sitemap:
 </header>
 
 <h3>Historical traffic volume</h3>
-<div w3-include-html="metros_4xplot.html"></div>
+<div w3-include-html="plots/metros_4xplot.html"></div>
 
 <h3>Individual city BPR fit</h3>
-
+<div w3-include-html="plots/metro_fits.html"></div>
 
 <h3>Travel time increase results</h3>
 
