Updated home page to link to article
And remove old summer undergrads posting

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ sitemap:
 								<header class="major">
 									<h2><a href="#">Welcome</a></h2>
 								</header>
-								<h3>We are currently seeking full-time undergraduate researchers for summer 2020. If you are interested in working with us, please see this announcement for details! <font color="blue"><a href="/download/WorkLab_UndergradResearch_Summer2020.pdf" target="_blank">[DOWNLOAD]</a></font></h3>
+								<h3>Read our recent article: <font color="blue"><a href="/therebound/" target="_blank">The Rebound: How Covid-19 could lead to worse traffic</a></font></h3>
                                 <p>Our research group uses sensing technologies, models, data, and advanced analytics to understand mobility systems so that we can improve them. Our research projects explore the interplay between autonomous vehicles and phantom traffic jams. We also use large mobility datasets to understand urban traffic congestion at city scales, and freight rail traffic at the regional scale. We build mathematical models and systems theory tools to understand the underlying behavior of traffic flow.   </p>
 								<a href="#" class="image main"><img src="/images/Team_research.jpg" alt=""></a>
   
