Minor article updates.

--- a/thereboundnoplots/index.html
+++ b/thereboundnoplots/index.html
@@ -3,6 +3,6 @@
 	<meta http-equiv = "refresh" content = "0; url = https://lab-work.github.io/therebound/" />
   </head>
   <body>
-    <p>Please follow <a href="https://lab-work.github.io/therebound/">this link</a>.</p>
+    <p>This URL has been deprecated. If redirect does not happen automatically, please follow <a href="https://lab-work.github.io/therebound/">this link</a> to the article.</p>
   </body>
 </html>
