--- a/therebound/index.html
+++ b/therebound/index.html
@@ -15,6 +15,7 @@ sitemap:
 </header>
 
 <p><b>Update 05/25/2020:</b> The Rebound has been updated with new models that account for prediction uncertainty. The prior version of the article has been archived at <a href="/thereboundv1/index.html">The Rebound v1</a>.</p>
+<p><b>Update 07/20/2020:</b> A label bug was fixed in the Rebound Calculator where the total travel time was reported in the data table.</p>
 
 <h2>Rebound Calculator</h2>
 
