Updating Site --M Nice
adding publications and research project (CAN Coach)

--- a/publications.html
+++ b/publications.html
@@ -16,6 +16,7 @@ sitemap:
 </em></p>
 <p><strong>Journal publications</strong></p>
 <ol>
+<li>M. Nice, S. Elmadani, R. Bhadani, M. Bunting, J. Sprinkle, and D. Work. 2021. "CAN coach: vehicular control through human cyber-physical systems." <em>In Proceedings of the ACM/IEEE 12th International Conference on Cyber-Physical Systems (ICCPS '21)</em>. Association for Computing Machinery, New York, NY, USA, 132–142. <strong>Download: </strong><a href = 'https://doi.org/10.1145/3450267.3450541'>preprint</a>, <a href='https://doi.org/10.1145/3450267.3450541'>manuscript</a>.</li>
 <li>G. Gunter, D. Gloudemans, R. E. Stern, S. McQuade, R. Bhadani, M. Bunting, M. L. Delle Monache, R. Lysecky, B. Seibold, J. Sprinkle, B. Piccoli, D. B. Work "Are commercially implemented adaptive cruise control systems string stable?" Download: <a href="https://arxiv.org/abs/1905.02108">preprint</a>.</li>
 <li>G. Gunter, C. Janssen, W. Barbour, R. E. Stern, D. B. Work. "Model based string stability of adaptive cruise control systems using field data." Download: <a href="https://arxiv.org/abs/1902.04983">preprint</a>.</li>
 <li>F. Wu, R. Stern, S. Cui, M. L. Delle Monache, R. Bhadanid, M. Bunting, M. Churchill, N. Hamilton, R. Haulcy, B. Piccoli, B. Seibold, J. Sprinkle, D. Work. &#8220;Tracking vehicle trajectories and fuel rates in oscillatory traffic.&#8221; <em>submitted to Transportation Research Part C: Emerging Technologies, 2017. </em><strong>Download: </strong><a href="https://www.dropbox.com/s/mx3qioeg7yxgz6z/Wuetal2017.pdf?dl=0">preprint</a></li>
