--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ sitemap:
 								<header class="major">
 									<h2><a href="#">Welcome</a></h2>
 								</header>
-								<h3>Read our recent article: <font color="blue"><a href="/therebound/" target="_blank">The Rebound: How Covid-19 could lead to worse traffic</a></font></h3>
+								<h3>Currently seeking for undergraduate researchers: <font color="blue"><a href="/blog/i24-undergrad/" target="_blank">I24-MOTION testbed trajectory data analysis</a></font></h3>
                                 <p>Our research group uses sensing technologies, models, data, and advanced analytics to understand mobility systems so that we can improve them. Our research projects explore the interplay between autonomous vehicles and phantom traffic jams. We also use large mobility datasets to understand urban traffic congestion at city scales, and freight rail traffic at the regional scale. We build mathematical models and systems theory tools to understand the underlying behavior of traffic flow.   </p>
 								<a href="#" class="image main"><img src="/images/Team_research.jpg" alt=""></a>
   
