--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ sitemap:
 								<header class="major">
 									<h2><a href="#">Welcome</a></h2>
 								</header>
-								<h3>Currently seeking for: <font color="blue"><a href="/blog/i24-undergrad/" target="_blank">Undergraduate researchers on I24-MOTION testbed trajectory data analysis</a><br>
+								<h3>Currently seeking for: <font color="blue"><a href="/download/VU-ISIS-REU-2021-22.pdf" target="_blank">Undergraduate researchers on I24-MOTION testbed trajectory data analysis</a><br>
 									<a href="/download/worklab_2022_grad_flyer.pdf" target="_blank">Graduate school research opportunities in Smart Mobility Systems</a><br>
 									<a href="https://www.vanderbilt.edu/postdoc/position-detail/?id=587" target="_blank">Postdocs in the area of transportation cyber physical systems </a><br>
 									</font></h3>
