--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ sitemap:
 									<h2><a href="#">Welcome</a></h2>
 								</header>
 								<h3>CURRENTLY SEEKING TO HIRE: <font color="blue"><br>
+									<a href="/download/VU-ISIS-CVU-2021-22.pdf" target="_blank">Undergraduate researcher in computer vision</a><br>
 									<a href="/download/VU-ISIS-REU-2021-22.pdf" target="_blank">Undergraduate researchers on I24-MOTION testbed trajectory data analysis</a><br>
 									<a href="/download/worklab_2022_grad_flyer.pdf" target="_blank">Graduate researchers in Smart Mobility Systems</a><br>
 									<a href="https://www.vanderbilt.edu/postdoc/position-detail/?id=587" target="_blank">Postdocs in the area of transportation cyber physical systems </a><br>
